--- a/fifth-screen-extra.html
+++ b/fifth-screen-extra.html
@@ -26,9 +26,7 @@
             <h1 class="step-value">шаг 5</h1>
             <h2 class="step-description">Заполните информацию<br> о ресурсе:</h2>
             <h3 class="fifth-step-description">Выберете<br> местоположение ресурса:</h3>
-            <div class="select-list">
-                <input type="text" placeholder="Город_" class="city-extra-input"><label for="" class="city-input-icon"><i class="fa fa-check" aria-hidden="true"></i></label>
-            </div>
+            <input type="text" placeholder="Город_" class="city-extra-input"><label for="" class="city-input-icon"><i class="fa fa-check" aria-hidden="true"></i></label>
             <div class="options">
                 <div class="content-options">
                     <div class="scrollbar-text">
@@ -42,3 +40,5 @@
     </div>
 </body>
 </html>
+<!-- <input type="text" placeholder="Город_" class="city-extra-input"><label for="" class="city-input-icon"><i class="fa fa-check" aria-hidden="true"></i></label> -->
+<!-- select-list -->
