--- a/extra-main-screen-resource3.html
+++ b/extra-main-screen-resource3.html
@@ -48,7 +48,7 @@
             <div class="add-res-block">
                 <div class="resource-img"></div>
                 <p class="res-img-desc">Краткое название <br>для ресурса менее<br>50и символов</p>
-                <div class="close-btn btn-rel">
+                <div class="close-btn btn-rel adaptive">
                     <a href=""><i class="mdi mdi-hospital" aria-hidden="true"></i></a>
                 </div>
             </div>
